# world-of-prompcraft

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  PIPELINE_IMPROVEMENTS.md  PLAN.md  PR_ADVANCED_AGENTS.md  PR_SUMMARY.md  README.md  add_palm_collision.py  add_roof_collision.py  agentic-improvements.md  agentic_merge_plan.md  architecture.md  docker-compose.yml  edu-improvements-summary.md  fix_chiringuito.py  fix_chiringuito_2.py  improve_collisions.py  llmday-art-showcase.html  llmday-presentation.html  model_state_plan-_sataurday.md  package-lock.json  package.json  persistance_proposal.md  remove_bar_objects.py  remove_bar_objects_robust.py  remove_kitchen.py  research.md  skin-plan.md  state.md  test_physics.ts  test_static_meshes.ts  thursday_plan.md  to-do.md  visual-agentic-improvements.md
server/: .coverage  ARCHITECTURE.md  Dockerfile  agentic-architecture-plan.md  coverage.xml  main.py  manage.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
server/agents/: npc_graph.py  tools.py
server/api/: router.py
server/api/endpoints/: chat.py
server/core/: cache.py  config.py
server/data/: game_state.db  game_state.db-shm  game_state.db-wal
server/src/: config.py  main.py
server/src/agents/: __init__.py  action_sink.py  agent_state.py  domain.py  (+5 more)
server/tests/: README_TEST_ORGANIZATION.md  conftest.py  llm_fixtures.py  load_test_locust.py  locustfile.py  test_chat.py  test_combat_tools.py  test_llm_provider.py  test_npc_logic.py  test_personalities.py  test_player_state.py  test_retriever.py  test_zones.py
(+651 files in other folders)
